fixed search button and added title limiter to prevent suggestion box title wrapping

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -99,6 +99,11 @@ a:hover {
   background-color: black;
 }
 
+.suggestion-font {
+  font-size: 1.25em;
+  font-weight: bold;
+}
+
 .suggestion-poster {
   height: 8%;
   width: 8%;
